# OpenFinger

./: .clang-format  .gitignore  .gitmodules  .travis.yml  README.md  build.sh
fingervein-extraction/: CMakeLists.txt
fingervein-extraction/include/: fingervein_extraction.hpp
fingervein-extraction/include/extraction/: extraction.hpp
fingervein-extraction/src/: extraction.cpp
fingervein-extraction/test/extraction/: extraction.cpp
fingervein-matching/: CMakeLists.txt
fingervein-matching/include/: fingervein_matching.hpp
fingervein-matching/include/matching/: matching.hpp
fingervein-matching/src/: matching.cpp
fingervein-matching/test/matching/: matching.cpp
fingervein-preprocessing/: CMakeLists.txt
fingervein-preprocessing/include/: dependencies.hpp  fingervein_preprocessing.hpp  structures.hpp
fingervein-preprocessing/include/preprocessing/: bilateralFiltering.hpp  binarization.hpp  contrastEnhancement.hpp  imagecontour.hpp  orientationMap.hpp  preprocessing.hpp  thinning.hpp
fingervein-preprocessing/include/utility/: utility.hpp
fingervein-preprocessing/src/: bilateralFiltering.cpp  binarization.cpp  contrastEnhancement.cpp  orientationMap.cpp  preprocessing.cpp  thinning.cpp
fingervein-preprocessing/test/preprocessing/: preprocessing.cpp
neural_network/main/: roi.py  segmentation.py  test.py
neural_network/main/dataset/train/: via_region_data.json
neural_network/main/dataset/val/: via_region_data.json
neural_network/main/mrcnn/: config.py  model.py  parallel_model.py  visualize.py
